[package]
name = "embudo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["client", "http1", "server", "runtime"] }
lazy_static = "1.4.0"
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
toml = "0.5"
serde = { version = "1", features = ["derive"] }
